# task-pilot-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md
task-pilot-agent/: .env  CODE_INDEX.md  DDW-3000C-08SC.xlsx  README.md  app_main.py  main.py  mcp_process.py  pyproject.toml  pytest.ini  restart.sh
task-pilot-agent/auth/: __init__.py  dependencies.py  hardening.py  models.py  rate_limit.py  router.py  security.py  service.py
task-pilot-agent/auth/providers/: __init__.py  base.py  google.py  microsoft.py  oidc.py  registry.py  wechat.py
task-pilot-agent/brain/: app.py
task-pilot-agent/brain/core/: agent_registry.py  approval_service.py  autoagent_runtime.py  context.py  context_budget.py  eval_runner.py  llm.py  plan_snapshots.py  planning_policy.py  printer.py  run_events.py  sanitization.py  session_context.py  session_message_service.py  session_view_service.py  sessions.py  task_memory_context.py  task_recovery.py  task_runner.py  tasks.py  tool_policy.py
task-pilot-agent/brain/models/: agent.py  requests.py  responses.py
task-pilot-agent/brain/web/: autoagent.html
task-pilot-agent/config/: config.py
task-pilot-agent/file/: db_engine.py  file_op.py  file_table_op.py  file_type.py
task-pilot-agent/frontend/: index.html  package-lock.json  package.json  vite.config.js
task-pilot-agent/frontend/src/: App.vue  styles.css
task-pilot-agent/llm/: __init__.py  compressor.py  manager.py  prompt_store.py  prompt_template.py  tokenizer.py  types.py
task-pilot-agent/llm/providers/: base.py  claude_provider.py  gemini_provider.py  openai_provider.py
task-pilot-agent/mem0_qdrant/: meta.json
task-pilot-agent/memory/: __init__.py  memory_mgr.py  message_manager.py  rag_retriever.py  test_message_manager.py  usage_example.py
task-pilot-agent/tests/: __init__.py  model_scope_mcp.py  requirements.txt  run_tests.py
task-pilot-agent/tests/auth/: test_auth_config.py  test_auth_hardening.py  test_auth_router.py  test_auth_service.py  test_frontend_auth_source.py  test_google_provider.py  test_provider_adapters.py  test_task_and_file_ownership.py
task-pilot-agent/tests/gaia/: convert_results.py  result.jsonl  (+8 more)
task-pilot-agent/utils/: file.py  logger.py  retry.py
(+455 files in other folders)
