[project]
name = "task-pilot-agent"
version = "0.1.0"
description = "TaskPilotAgent: multi-model task planning and tool orchestration service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-sandbox>=0.0.17",
    "aiofiles>=25.1.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "anthropic>=0.66.0",
    "beautifulsoup4>=4.13.5",
    "browser-use>=0.9.6",
    "fastapi>=0.116.1",
    "google-genai>=1.48.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json-repair>=0.50.1",
    "litellm>=1.77.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mcp==1.14.1",
    "concurrent-log-handler>=0.9.25",
    "mem0ai>=0.1.116",
    "modelscope>=1.29.2",
    "numpy>=2.3.3",
    "openai>=1.107.0",
    "openpyxl>=3.1.2",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.8",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "smolagents>=1.21.3",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
]
mysqlclient = [
    "mysqlclient>=2.2.7",
]

[tool.uv.workspace]
members = [
    "tools/mcp_local",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
