[project]
name = "mcp-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "json-repair>=0.50.1",
    "litellm>=1.77.0",
    "loguru>=0.7.3",
    "mcp>=1.13.1",
    "openai>=1.107.0",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "smolagents>=1.21.3",
    "sqlmodel>=0.0.24",
]
